kubernetes/staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eternia-staging
  labels:
    name: eternia-staging
    environment: staging
